feat: update for project new feature.

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,31 @@
-venv/
 __pycache__/
-.mypy_cache/
-.pytest_cache/
-.coverage
-backups/
+*.py[cod]
+*.pyd
+venv/
+.venv/
+env/
 .DS_Store
-*.log
-*.pyc
-docs/
-node_modules/
-.env
-.env.*
-logs/
-tmp/
-*.tmp
-*.bak
 .vscode/
 .idea/
+*.log
+tmp/
+build/
+dist/
+*.egg-info/
+.eggs/
+.pytest_cache/
+.coverage*
+htmlcov/
+coverage.xml
+test_reports/
+.mypy_cache/
+.ruff_cache/
+.env*
+!.env.example
+*.pem
+*.key
+src/data/webhooks/
+src/logs/
 db.sqlite3
+*.tmp
+*.bak
